# DWF-k-means

./: LICENSE  README.md  evaluate.ipynb  experiment.py  experiment_femnist.py  experiment_global_config.py  experiment_mnist.py  experiment_synthetic.py  pyproject.toml  requirement.txt  utils.py
data femnist/: preprocessing_scipt.py  y.parquet
experiments/FEMNIST/: Results.csv
experiments/MNIST/: Results.csv
experiments/SYNTHETIC/: Results.csv
flkmeans/: __init__.py  _flkmeans.py  utils.py
